@@ -8,11 +8,14 @@ clean:
 	rm -f .coverage
 
 install-dev:
-	$(INSTALL) -m 755 -d $(DESTDIR)$(PREFIX)/share/python/runtime.d \
-		$(DESTDIR)$(PREFIX)/share/debhelper/autoscripts/ $(DESTDIR)$(PREFIX)/bin
+	$(INSTALL) -m 755 -d $(DESTDIR)$(PREFIX)/bin \
+		$(DESTDIR)$(PREFIX)/share/python/runtime.d \
+		$(DESTDIR)$(PREFIX)/share/debhelper/autoscripts/ \
+		$(DESTDIR)$(PREFIX)/share/perl5/Debian/Debhelper/Sequence/
 	$(INSTALL) -m 644 runtime.d/* $(DESTDIR)$(PREFIX)/share/python/runtime.d/
 	$(INSTALL) -m 644 autoscripts/* $(DESTDIR)$(PREFIX)/share/debhelper/autoscripts/
 	$(INSTALL) -m 755 dh_python2 $(DESTDIR)$(PREFIX)/bin/
+	$(INSTALL) -m 644 dh_python2.pm $(DESTDIR)$(PREFIX)/share/perl5/Debian/Debhelper/Sequence/
 
 install-runtime:
 	$(INSTALL) -m 755 -d $(DESTDIR)$(PREFIX)/share/python/debpython $(DESTDIR)$(PREFIX)/bin
