@@ -1,3 +1,3 @@
 if which pycompile >/dev/null 2>&1; then
-	pycompile #ARGS#
+	pycompile -p #PACKAGE# #ARGS#
 fi
