@@ -4,6 +4,8 @@ python-defaults (2.6.5-2) UNRELEASED; urgency=low
   * dh_python2:
     - create extension symlinks in /usr/lib/pyshared/pythonX.Y
     - add support for debian/pydist-overrides
+    - add dh sequence file (use "--with dh_python2" in debian/rules)
+    - some bugs fixed
   * Support for Python3 removed in dh_python2, pycompile and pyclean
     (moved to python3-defaults) 
   * debian/copyright: Add a note about dh_python2, pycompile, pyclean and
